# ethermine

./: .dockerignore  .env.dist  README.md  docker-compose.dev.yml  pyproject.toml
config/: discord_config.py
docker/: create_user.sh
docker/python/: Dockerfile
