[tool.poetry]
name = "ethermine-bot"
version = "0.1.0"
description = ""
authors = ["Oleg Tikhonov <to@toro.one>"]
readme = "README.md"
repository = "https://github.com/traffaret/ethermine"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
SQLAlchemy = "^1.4.25"
pydantic = "^1.8.2"
